loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;

typedef const char* VRmSTRING;


/// "size" type (int)
typedef VRM_STRUCT _VRmSizeI {
	int m_width;
	int m_height;
} VRmSizeI;


/// "point" type (int)
typedef VRM_STRUCT _VRmPointI {
	int m_x;
	int m_y;
} VRmPointI;


/// "rect" type (int)
typedef VRM_STRUCT _VRmRectI {
	int m_left;
	int m_top;
	int m_width;
	int m_height;
} VRmRectI;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;

// ------------------------------------------------------------------------
/// @defgroup Properties                                Property Management
// ------------------------------------------------------------------------
/// @{

/// enumeration of supported property value types.
/// see struct returned from VRmUsbCamGetPropertyInfo()
typedef VRM_ENUM _VRmPropType {
	VRM_PROP_TYPE_BOOL = 1,
	VRM_PROP_TYPE_INT,
	VRM_PROP_TYPE_FLOAT,
	VRM_PROP_TYPE_STRING,
	VRM_PROP_TYPE_ENUM,
	VRM_PROP_TYPE_SIZE_I,
	VRM_PROP_TYPE_POINT_I,
	VRM_PROP_TYPE_RECT_I,
	VRM_PROP_TYPE_DOUBLE
} VRmPropType;


/// general information about a property. see VRmUsbCamGetPropertyInfo()
/// NOTE: the strings within this struct are only guaranteed to be valid until the next API call!
typedef VRM_STRUCT _VRmPropInfo {
	VRmPropId   m_id;
	VRmPropType m_type;
	VRmSTRING   m_id_string;
	VRmSTRING   m_description;
	VRmBOOL     m_writeable;
} VRmPropInfo;


/// @addtogroup BoolProps Properties of type VRM_PROP_TYPE_BOOL
/// @{
typedef VRM_STRUCT _VRmPropAttribsB {
	VRmBOOL m_default;
	VRmBOOL m_min;
	VRmBOOL m_max;
	VRmBOOL m_step;
} VRmPropAttribsB;

/// @}

/// @addtogroup IntProps Properties of type VRM_PROP_TYPE_INT
/// @{
typedef VRM_STRUCT _VRmPropAttribsI {
	int m_default;
	int m_min;
	int m_max;
	int m_step;
} VRmPropAttribsI;

/// @}

/// @addtogroup FloatProps Properties of type VRM_PROP_TYPE_FLOAT
/// @{
typedef VRM_STRUCT _VRmPropAttribsF {
	float m_default;
	float m_min;
	float m_max;
	float m_step;
} VRmPropAttribsF;

/// @}

/// @addtogroup DoubleProps Properties of type VRM_PROP_TYPE_DOUBLE
/// @{
typedef VRM_STRUCT _VRmPropAttribsD {
	double m_default;
	double m_min;
	double m_max;
	double m_step;
} VRmPropAttribsD;

/// @}

/// @addtogroup StringProps Properties of type VRM_PROP_TYPE_STRING.
/// NOTE: the strings within the VRmPropAttribsS struct are only guaranteed to be valid until the next API call!
/// @{
typedef VRM_STRUCT _VRmPropAttribsS {
	VRmSTRING m_default;
	VRmSTRING m_min;
	VRmSTRING m_max;
	VRmSTRING m_step;
} VRmPropAttribsS;

/// @}

/// @addtogroup EnumProps Properties of type VRM_PROP_TYPE_ENUM
/// @{
typedef VRM_STRUCT _VRmPropAttribsE {
	VRmPropId m_default;
	VRmPropId m_min;
	VRmPropId m_max;
	VRmPropId m_step;
} VRmPropAttribsE;

/// @}

/// @addtogroup SizeIProps Properties of type VRM_PROP_TYPE_SIZE_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsSizeI {
	VRmSizeI m_default;
	VRmSizeI m_min;
	VRmSizeI m_max;
	VRmSizeI m_step;
} VRmPropAttribsSizeI;

/// @}

/// @addtogroup PointIProps Properties of type VRM_PROP_TYPE_POINT_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsPointI {
	VRmPointI m_default;
	VRmPointI m_min;
	VRmPointI m_max;
	VRmPointI m_step;
} VRmPropAttribsPointI;

/// @}

/// @addtogroup RectIProps Properties of type VRM_PROP_TYPE_RECT_I
/// @{
typedef VRM_STRUCT _VRmPropAttribsRectI {
	VRmRectI m_default;
	VRmRectI m_min;
	VRmRectI m_max;
	VRmRectI m_step;
} VRmPropAttribsRectI;

/// @}

/// get number of available properties
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyListSize(VRmUsbCamDevice f_device, VRmDWORD* fp_size);


/// get identifier of property with index [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyListEntry(VRmUsbCamDevice f_device, VRmDWORD f_index, VRmPropId* fp_id);


/// get info struct of property
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyInfo(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropInfo* fp_info);


/// check whether some specific property is supported
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertySupported(VRmUsbCamDevice f_device, VRmPropId f_id, VRmBOOL* fp_supported);


/// @addtogroup BoolProps Properties of type VRM_PROP_TYPE_BOOL
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueB(VRmUsbCamDevice f_device, VRmPropId f_id, VRmBOOL* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueB(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmBOOL* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsB(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsB* fp_attribs);

/// @}

/// @addtogroup IntProps Properties of type VRM_PROP_TYPE_INT
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueI(VRmUsbCamDevice f_device, VRmPropId f_id, int* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueI(VRmUsbCamDevice f_device, VRmPropId f_id, const int* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsI(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsI* fp_attribs);

/// @}

/// @addtogroup FloatProps Properties of type VRM_PROP_TYPE_FLOAT
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueF(VRmUsbCamDevice f_device, VRmPropId f_id, float* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueF(VRmUsbCamDevice f_device, VRmPropId f_id, const float* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsF(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsF* fp_attribs);

/// @}

/// @addtogroup DoubleProps Properties of type VRM_PROP_TYPE_DOUBLE
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueD(VRmUsbCamDevice f_device, VRmPropId f_id, double* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueD(VRmUsbCamDevice f_device, VRmPropId f_id, const double* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsD(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsD* fp_attribs);

/// @}

/// @addtogroup StringProps Properties of type VRM_PROP_TYPE_STRING.
/// NOTE: the string returned by VRmUsbCamGetPropertyValueS() is only guaranteed to be valid until the next API call!
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueS(VRmUsbCamDevice f_device, VRmPropId f_id, VRmSTRING* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueS(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmSTRING* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsS(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsS* fp_attribs);

/// @}

/// @addtogroup EnumProps Properties of type VRM_PROP_TYPE_ENUM
/// @{
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyValueE(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropId* fp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetPropertyValueE(VRmUsbCamDevice f_device, VRmPropId f_id, const VRmPropId* fcp_value);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPropertyAttribsE(VRmUsbCamDevice f_device, VRmPropId f_id, VRmPropAttribsE* fp_attribs);