loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


struct__VRmPropAttribsS.__slots__ = [
    'm_default',
    'm_min',
    'm_max',
    'm_step',
]
struct__VRmPropAttribsS._fields_ = [
    ('m_default', VRmSTRING),
    ('m_min', VRmSTRING),
    ('m_max', VRmSTRING),
    ('m_step', VRmSTRING),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 806
VRmPropAttribsS = struct__VRmPropAttribsS

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 816


class struct__VRmPropAttribsE(Structure):
    pass


struct__VRmPropAttribsE.__slots__ = [
    'm_default',
    'm_min',
    'm_max',
    'm_step',
]
struct__VRmPropAttribsE._fields_ = [
    ('m_default', VRmPropId),
    ('m_min', VRmPropId),
    ('m_max', VRmPropId),
    ('m_step', VRmPropId),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 816
VRmPropAttribsE = struct__VRmPropAttribsE

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 826


class struct__VRmPropAttribsSizeI(Structure):
    pass


struct__VRmPropAttribsSizeI.__slots__ = [
    'm_default',
    'm_min',
    'm_max',
    'm_step',
]
struct__VRmPropAttribsSizeI._fields_ = [
    ('m_default', VRmSizeI),
    ('m_min', VRmSizeI),
    ('m_max', VRmSizeI),
    ('m_step', VRmSizeI),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 826
VRmPropAttribsSizeI = struct__VRmPropAttribsSizeI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 836


class struct__VRmPropAttribsPointI(Structure):
    pass


struct__VRmPropAttribsPointI.__slots__ = [
    'm_default',
    'm_min',
    'm_max',
    'm_step',
]
struct__VRmPropAttribsPointI._fields_ = [
    ('m_default', VRmPointI),
    ('m_min', VRmPointI),
    ('m_max', VRmPointI),
    ('m_step', VRmPointI),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 836
VRmPropAttribsPointI = struct__VRmPropAttribsPointI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 846


class struct__VRmPropAttribsRectI(Structure):
    pass


struct__VRmPropAttribsRectI.__slots__ = [
    'm_default',
    'm_min',
    'm_max',
    'm_step',
]
struct__VRmPropAttribsRectI._fields_ = [
    ('m_default', VRmRectI),
    ('m_min', VRmRectI),
    ('m_max', VRmRectI),
    ('m_step', VRmRectI),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 846
VRmPropAttribsRectI = struct__VRmPropAttribsRectI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 850
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyListSize'):
    VRmUsbCamGetPropertyListSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyListSize
    VRmUsbCamGetPropertyListSize.argtypes = [
        VRmUsbCamDevice, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetPropertyListSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 853
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyListEntry'):
    VRmUsbCamGetPropertyListEntry = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyListEntry
    VRmUsbCamGetPropertyListEntry.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmPropId)
    ]
    VRmUsbCamGetPropertyListEntry.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 856
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyInfo'):
    VRmUsbCamGetPropertyInfo = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyInfo
    VRmUsbCamGetPropertyInfo.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropInfo)
    ]
    VRmUsbCamGetPropertyInfo.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 859
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertySupported'):
    VRmUsbCamGetPropertySupported = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertySupported
    VRmUsbCamGetPropertySupported.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmBOOL)
    ]
    VRmUsbCamGetPropertySupported.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 863
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueB'):
    VRmUsbCamGetPropertyValueB = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueB
    VRmUsbCamGetPropertyValueB.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmBOOL)
    ]
    VRmUsbCamGetPropertyValueB.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 864
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueB'):
    VRmUsbCamSetPropertyValueB = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueB
    VRmUsbCamSetPropertyValueB.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmBOOL)
    ]
    VRmUsbCamSetPropertyValueB.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 865
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsB'):
    VRmUsbCamGetPropertyAttribsB = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsB
    VRmUsbCamGetPropertyAttribsB.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsB)
    ]
    VRmUsbCamGetPropertyAttribsB.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 870
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueI'):
    VRmUsbCamGetPropertyValueI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueI
    VRmUsbCamGetPropertyValueI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_int)
    ]
    VRmUsbCamGetPropertyValueI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 871
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueI'):
    VRmUsbCamSetPropertyValueI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueI
    VRmUsbCamSetPropertyValueI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_int)
    ]
    VRmUsbCamSetPropertyValueI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 872
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsI'):
    VRmUsbCamGetPropertyAttribsI = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsI
    VRmUsbCamGetPropertyAttribsI.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsI)
    ]
    VRmUsbCamGetPropertyAttribsI.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 877
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueF'):
    VRmUsbCamGetPropertyValueF = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueF
    VRmUsbCamGetPropertyValueF.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_float)
    ]
    VRmUsbCamGetPropertyValueF.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 878
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueF'):
    VRmUsbCamSetPropertyValueF = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueF
    VRmUsbCamSetPropertyValueF.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_float)
    ]
    VRmUsbCamSetPropertyValueF.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 879
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsF'):
    VRmUsbCamGetPropertyAttribsF = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsF
    VRmUsbCamGetPropertyAttribsF.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsF)
    ]
    VRmUsbCamGetPropertyAttribsF.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 884
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueD'):
    VRmUsbCamGetPropertyValueD = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueD
    VRmUsbCamGetPropertyValueD.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_double)
    ]
    VRmUsbCamGetPropertyValueD.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 885
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueD'):
    VRmUsbCamSetPropertyValueD = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueD
    VRmUsbCamSetPropertyValueD.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(c_double)
    ]
    VRmUsbCamSetPropertyValueD.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 886
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsD'):
    VRmUsbCamGetPropertyAttribsD = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsD
    VRmUsbCamGetPropertyAttribsD.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsD)
    ]
    VRmUsbCamGetPropertyAttribsD.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 892
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueS'):
    VRmUsbCamGetPropertyValueS = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueS
    VRmUsbCamGetPropertyValueS.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmSTRING)
    ]
    VRmUsbCamGetPropertyValueS.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 893
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueS'):
    VRmUsbCamSetPropertyValueS = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueS
    VRmUsbCamSetPropertyValueS.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmSTRING)
    ]
    VRmUsbCamSetPropertyValueS.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 894
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsS'):
    VRmUsbCamGetPropertyAttribsS = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsS
    VRmUsbCamGetPropertyAttribsS.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsS)
    ]
    VRmUsbCamGetPropertyAttribsS.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 899
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyValueE'):
    VRmUsbCamGetPropertyValueE = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyValueE
    VRmUsbCamGetPropertyValueE.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropId)
    ]
    VRmUsbCamGetPropertyValueE.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 900
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetPropertyValueE'):
    VRmUsbCamSetPropertyValueE = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetPropertyValueE
    VRmUsbCamSetPropertyValueE.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropId)
    ]
    VRmUsbCamSetPropertyValueE.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 901
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPropertyAttribsE'):
    VRmUsbCamGetPropertyAttribsE = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPropertyAttribsE
    VRmUsbCamGetPropertyAttribsE.argtypes = [
        VRmUsbCamDevice, VRmPropId, POINTER(VRmPropAttribsE)
    ]
    VRmUsbCamGetPropertyAttribsE.restype = VRmRetVal
